# Fungus

./: .env  .env.production  Cargo.toml  DEPLOYMENT.md  README.md  build-production.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
cpanel-deployment/api/: .env
deploy/: DEPLOY_INSTRUCTIONS.txt
deploy/frontend/: .htaccess  index.html
deploy/frontend/assets/: index-Cokqdmqg.js  index-DcTYZXPB.css
deploy/php-backend/: .env  .htaccess  index.php
deploy/php-backend/config/: database.php
deploy/php-backend/routes/: auth.php  insumos.php  login.php  products.php  (+2 more)
php-backend/: .htaccess  README.md  add-image-column.php  index.php  init-database.php  init-insumos-table.php  init-products-table.php  test-api.php  test-auth.php  test-connection.php
php-backend/config/: database.php  jwt.php
php-backend/routes/: auth.php  compradores.php  compras.php  cotizaciones.php  insumos.php  login.php  logout.php  products.php  profile.php  proveedores.php  register.php  ventas.php  woocommerce.php
server/: .env  .env.production  debug-connection.js  package-lock.json  package.json  server-temp.js  server.js  test-db-connection.cjs
server/config/: database.js
server/middleware/: auth.js
server/routes/: auth.js
server/scripts/: init-database.js
src/: App.tsx  db.rs  esperado.txt  index.css  main.rs
src/config/: api.ts
src/contexts/: AuthContext.tsx
src/pages/: Auth.tsx  Compradores.tsx  Compras.tsx  Cotizaciones.tsx  Dashboard.tsx  Index.tsx  Insumos.tsx  Productos.tsx  Proveedores.tsx  TiendaDigital.tsx  Ventas.tsx
(+7 files in other folders)
